legacy/monitoring/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
#  annotations:
#    nginx.ingress.kubernetes.io/auth-url: http://oidc-authenticator.oidc-authenticator.svc.cluster.local/auth
#    nginx.ingress.kubernetes.io/auth-signin: https://auth.nas-local.io/login
#    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User, X-Auth-Request-Email
spec:
  ingressClassName: nginx
  rules:
    - host: alerts.nas-local.io
      http:
        paths:
          - path: /
            backend:
              service:
                name: alertmanager-main
                port:
                  number: 9093
            pathType: ImplementationSpecific
